--- a/TODO
+++ b/TODO
@@ -63,3 +63,7 @@ Write output to separate files.
 
 clean up makefile
 
+Add option to clip TSC to 53 bits (work around R limitation).
+
+If 0xdecafbad is in the error field, don't print the sample.
+
