Things to do...

--- a/TODO
+++ b/TODO
@@ -49,3 +49,10 @@ Really need WAIT_UNTIL:msr:relation:value:mask:seconds
 Summary statistics
 
 Add PLATFORM_ENERGY to polling
+
+Check for minimum execution time on AB benchmarks
+
+Rename ABXOR to ABSHIFT
+
+Randomize choice of AB benchmarks
+
